Add Exceptions/ProblemDetails